accelerated-domains: add tsdjq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85010,6 +85010,7 @@ server=/tscsdwy.com/114.114.114.114
 server=/tsdaodao.com/114.114.114.114
 server=/tsddu.com/114.114.114.114
 server=/tsdjg.com/114.114.114.114
+server=/tsdjq.com/114.114.114.114
 server=/tsdxb.com/114.114.114.114
 server=/tsefang.com/114.114.114.114
 server=/tses.net/114.114.114.114
