accelerated-domains: add wzyds.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92113,6 +92113,7 @@ server=/wzxw7.com/114.114.114.114
 server=/wzxywj.com/114.114.114.114
 server=/wzy2.com/114.114.114.114
 server=/wzy6.com/114.114.114.114
+server=/wzyds.com/114.114.114.114
 server=/wzyestar.com/114.114.114.114
 server=/wzylrj.com/114.114.114.114
 server=/wzyzdyf.com/114.114.114.114
