accelerated-domains: add ngtravelercn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64836,6 +64836,7 @@ server=/ngread.com/114.114.114.114
 server=/ngrok.cc/114.114.114.114
 server=/ngrvvcr.com/114.114.114.114
 server=/ngswgs.com/114.114.114.114
+server=/ngtravelercn.com/114.114.114.114
 server=/ngty556.com/114.114.114.114
 server=/ngwxw.com/114.114.114.114
 server=/ngzyxx.com/114.114.114.114
