accelerated-domains: add jgstour.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49775,6 +49775,7 @@ server=/jgscct.com/114.114.114.114
 server=/jgsdaily.com/114.114.114.114
 server=/jgsemicon.com/114.114.114.114
 server=/jgstny.com/114.114.114.114
+server=/jgstour.com/114.114.114.114
 server=/jgtc315.com/114.114.114.114
 server=/jguanjia.com/114.114.114.114
 server=/jgums.com/114.114.114.114
