accelerated-domains: add lbhgle.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56348,6 +56348,7 @@ server=/lbf123.com/114.114.114.114
 server=/lbgold.com/114.114.114.114
 server=/lbgttc.com/114.114.114.114
 server=/lbhdbl.com/114.114.114.114
+server=/lbhgle.com/114.114.114.114
 server=/lbinin.com/114.114.114.114
 server=/lbjljc.com/114.114.114.114
 server=/lbjn.cc/114.114.114.114
