accelerated-domains: add tuopaishedecta.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85441,6 +85441,7 @@ server=/tuolajieightscore.com/114.114.114.114
 server=/tuoluowang.com/114.114.114.114
 server=/tuoluozhuan.net/114.114.114.114
 server=/tuoniaox.com/114.114.114.114
+server=/tuopaishedecta.com/114.114.114.114
 server=/tuopanban.com/114.114.114.114
 server=/tuopu.com/114.114.114.114
 server=/tuoren.com/114.114.114.114
