accelerated-domains: add shaolvjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76399,6 +76399,7 @@ server=/shaoke.com/114.114.114.114
 server=/shaolinjingwu.com/114.114.114.114
 server=/shaolintagou.com/114.114.114.114
 server=/shaolinwy.com/114.114.114.114
+server=/shaolvjt.com/114.114.114.114
 server=/shaomingyang.com/114.114.114.114
 server=/shaoniandream.com/114.114.114.114
 server=/shaoqun.com/114.114.114.114
