accelerated-domains: add chuanloo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21040,6 +21040,7 @@ server=/chuanhai.net/114.114.114.114
 server=/chuanjiaoban.com/114.114.114.114
 server=/chuanjie.vip/114.114.114.114
 server=/chuanke.com/114.114.114.114
+server=/chuanloo.com/114.114.114.114
 server=/chuanmeixing.com/114.114.114.114
 server=/chuanmeizy.com/114.114.114.114
 server=/chuannan.net/114.114.114.114
