--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77386,6 +77386,7 @@ server=/shoutao.biz/114.114.114.114
 server=/shouxi.com/114.114.114.114
 server=/shouxi.net/114.114.114.114
 server=/shouxieti.com/114.114.114.114
+server=/shouxihu.net/114.114.114.114
 server=/shouxintec.com/114.114.114.114
 server=/shouyao.com/114.114.114.114
 server=/shouyaoholding.com/114.114.114.114
