accelerated-domains: add ahlyjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9827,6 +9827,7 @@ server=/ahlife.com/114.114.114.114
 server=/ahljnews.com/114.114.114.114
 server=/ahlsm1.com/114.114.114.114
 server=/ahluqiao.com/114.114.114.114
+server=/ahlyjt.com/114.114.114.114
 server=/ahlzgd.com/114.114.114.114
 server=/ahmgroup.net/114.114.114.114
 server=/ahmjlm.com/114.114.114.114
