accelerated-domains: add hitour2005.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42678,6 +42678,7 @@ server=/hitnslab.net/114.114.114.114
 server=/hitoor.com/114.114.114.114
 server=/hitouch.com/114.114.114.114
 server=/hitoupiao.com/114.114.114.114
+server=/hitour2005.com/114.114.114.114
 server=/hitozumi.com/114.114.114.114
 server=/hitrip.info/114.114.114.114
 server=/hitui.com/114.114.114.114
