accelerated-domains: add zhujiajiao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103359,6 +103359,7 @@ server=/zhuji5.com/114.114.114.114
 server=/zhuji66.com/114.114.114.114
 server=/zhujia100.com/114.114.114.114
 server=/zhujia360.com/114.114.114.114
+server=/zhujiajiao.com/114.114.114.114
 server=/zhujiangbeer.com/114.114.114.114
 server=/zhujiangfuji.com/114.114.114.114
 server=/zhujiangrc.com/114.114.114.114
