--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42603,6 +42603,7 @@ server=/hinavi.net/114.114.114.114
 server=/hindlish.com/114.114.114.114
 server=/hingecloud.com/114.114.114.114
 server=/hinocn.com/114.114.114.114
+server=/hinotravel.com/114.114.114.114
 server=/hinpy.com/114.114.114.114
 server=/hintsnet.com/114.114.114.114
 server=/hiofd.com/114.114.114.114
