--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98809,6 +98809,7 @@ server=/ynkm88.com/114.114.114.114
 server=/ynkmit.com/114.114.114.114
 server=/ynkmjj.com/114.114.114.114
 server=/ynlmsc.pw/114.114.114.114
+server=/ynlygf.com/114.114.114.114
 server=/ynmbwl.com/114.114.114.114
 server=/ynmcyl.com/114.114.114.114
 server=/ynmec.com/114.114.114.114
