accelerated-domains: add zydanxia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105443,6 +105443,7 @@ server=/zycmfw.com/114.114.114.114
 server=/zyctd.com/114.114.114.114
 server=/zycultura.com/114.114.114.114
 server=/zyczg.com/114.114.114.114
+server=/zydanxia.com/114.114.114.114
 server=/zydlks.com/114.114.114.114
 server=/zydown.com/114.114.114.114
 server=/zydsy.com/114.114.114.114
