--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25136,6 +25136,7 @@ server=/dalidm.com/114.114.114.114
 server=/dalifa.com/114.114.114.114
 server=/daliha.com/114.114.114.114
 server=/dalipan.com/114.114.114.114
+server=/dalisanta.com/114.114.114.114
 server=/daliuren.vip/114.114.114.114
 server=/dalongkeji.com/114.114.114.114
 server=/dalongyun.com/114.114.114.114
