--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94325,6 +94325,7 @@ server=/xipunet.com/114.114.114.114
 server=/xipushuju.net/114.114.114.114
 server=/xiqb.com/114.114.114.114
 server=/xiqianyangyi.com/114.114.114.114
+server=/xiqiaoshantour.com/114.114.114.114
 server=/xiqifun.com/114.114.114.114
 server=/xiqinrc.com/114.114.114.114
 server=/xiqkj.com/114.114.114.114
