--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44184,6 +44184,7 @@ server=/hst.com/114.114.114.114
 server=/hst1966.net/114.114.114.114
 server=/hstars.net/114.114.114.114
 server=/hstczkj.com/114.114.114.114
+server=/hstd.com/114.114.114.114
 server=/hstong.com/114.114.114.114
 server=/hstpizza.com/114.114.114.114
 server=/hstpnetwork.com/114.114.114.114
