--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29339,6 +29339,7 @@ server=/ecool.site/114.114.114.114
 server=/ecoplastech.com/114.114.114.114
 server=/ecoprint.tech/114.114.114.114
 server=/ecorr.org/114.114.114.114
+server=/ecotourgroup.com/114.114.114.114
 server=/ecouser.net/114.114.114.114
 server=/ecovacs.com/114.114.114.114
 server=/ecovacsgroup.com/114.114.114.114
