--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25477,6 +25477,7 @@ server=/davdian.com/114.114.114.114
 server=/david-packaging.com/114.114.114.114
 server=/davidlovezoe.club/114.114.114.114
 server=/davincimotor.com/114.114.114.114
+server=/davost.com/114.114.114.114
 server=/dawaner.net/114.114.114.114
 server=/dawangling.com/114.114.114.114
 server=/daweiai.com/114.114.114.114
