--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48344,6 +48344,7 @@ server=/iqinbao.com/114.114.114.114
 server=/iqing.com/114.114.114.114
 server=/iqingguo.com/114.114.114.114
 server=/iqingua.com/114.114.114.114
+server=/iqingyi.com/114.114.114.114
 server=/iqinshuo.com/114.114.114.114
 server=/iqinzhou.com/114.114.114.114
 server=/iqishu.la/114.114.114.114
