accelerated-domains: add xikoutourism.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93733,6 +93733,7 @@ server=/xijinfa.com/114.114.114.114
 server=/xijing01.com/114.114.114.114
 server=/xikcloud.com/114.114.114.114
 server=/xikii.com/114.114.114.114
+server=/xikoutourism.com/114.114.114.114
 server=/xikuan.com/114.114.114.114
 server=/xikuqi.com/114.114.114.114
 server=/xiladaili.com/114.114.114.114
