--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29900,6 +29900,7 @@ server=/elong.com/114.114.114.114
 server=/elong.net/114.114.114.114
 server=/elongshine.com/114.114.114.114
 server=/elongstatic.com/114.114.114.114
+server=/elongtrip.com/114.114.114.114
 server=/elontest.com/114.114.114.114
 server=/eloonggame.com/114.114.114.114
 server=/eloongsun.com/114.114.114.114
