accelerated-domains: add mlhld.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62411,6 +62411,7 @@ server=/mlgbl.com/114.114.114.114
 server=/mlgj.com/114.114.114.114
 server=/mlgxw.org/114.114.114.114
 server=/mlhimalayanxt.com/114.114.114.114
+server=/mlhld.com/114.114.114.114
 server=/mlibaba.com/114.114.114.114
 server=/mliev.com/114.114.114.114
 server=/mlink.tv/114.114.114.114
