accelerated-domains: add tourzhenjiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84651,6 +84651,7 @@ server=/toursbms.com/114.114.114.114
 server=/tourscool.com/114.114.114.114
 server=/tourunion.com/114.114.114.114
 server=/tourye.com/114.114.114.114
+server=/tourzhenjiang.com/114.114.114.114
 server=/toushibao.com/114.114.114.114
 server=/toushivip.com/114.114.114.114
 server=/toutanymm.asia/114.114.114.114
