accelerated-domains: add jinshitan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50952,6 +50952,7 @@ server=/jinsheyi.com/114.114.114.114
 server=/jinshi-nj.com/114.114.114.114
 server=/jinshier66.com/114.114.114.114
 server=/jinshisoft.com/114.114.114.114
+server=/jinshitan.com/114.114.114.114
 server=/jinshmgw.com/114.114.114.114
 server=/jinshuangding.com/114.114.114.114
 server=/jinshuiyuncai.com/114.114.114.114
