--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62107,6 +62107,7 @@ server=/mingshi100.net/114.114.114.114
 server=/mingshi51.com/114.114.114.114
 server=/mingshi58.com/114.114.114.114
 server=/mingshiedu.com/114.114.114.114
+server=/mingshisanling.com/114.114.114.114
 server=/mingsoft.net/114.114.114.114
 server=/mingstar.net/114.114.114.114
 server=/mingtaokeji.com/114.114.114.114
