--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77603,6 +77603,7 @@ server=/shuangle888.com/114.114.114.114
 server=/shuangliangbale.com/114.114.114.114
 server=/shuanglin.com/114.114.114.114
 server=/shuanglingroup.com/114.114.114.114
+server=/shuanglongdong.com/114.114.114.114
 server=/shuanglongjp.com/114.114.114.114
 server=/shuanglongtai.com/114.114.114.114
 server=/shuangmatbs.com/114.114.114.114
