accelerated-domains: add gztig.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39811,6 +39811,7 @@ server=/gztfgame.com/114.114.114.114
 server=/gztgjd.com/114.114.114.114
 server=/gzthfy.com/114.114.114.114
 server=/gzthrc.com/114.114.114.114
+server=/gztig.com/114.114.114.114
 server=/gztime.cc/114.114.114.114
 server=/gztopkt.com/114.114.114.114
 server=/gztoptour.com/114.114.114.114
