--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84172,6 +84172,7 @@ server=/tmeissheng.com/114.114.114.114
 server=/tmetb.net/114.114.114.114
 server=/tmhkgs.com/114.114.114.114
 server=/tmhong.com/114.114.114.114
+server=/tmhtour.com/114.114.114.114
 server=/tmhttc.com/114.114.114.114
 server=/tmianyang.com/114.114.114.114
 server=/tmirob.com/114.114.114.114
