accelerated-domains: add wgppt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89843,6 +89843,7 @@ server=/wgnds.com/114.114.114.114
 server=/wgnpq.com/114.114.114.114
 server=/wgoic.com/114.114.114.114
 server=/wgos.com/114.114.114.114
+server=/wgppt.com/114.114.114.114
 server=/wgpsec.org/114.114.114.114
 server=/wgshs.com/114.114.114.114
 server=/wgsptc.com/114.114.114.114
