--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27966,6 +27966,7 @@ server=/dqguo.com/114.114.114.114
 server=/dqhui.com/114.114.114.114
 server=/dqiis.com/114.114.114.114
 server=/dqjob88.com/114.114.114.114
+server=/dqlaketour.com/114.114.114.114
 server=/dqlnyy.com/114.114.114.114
 server=/dqoooo.com/114.114.114.114
 server=/dqpi.net/114.114.114.114
