accelerated-domains: add leisure-expo.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56741,6 +56741,7 @@ server=/leisoon.com/114.114.114.114
 server=/leisu.com/114.114.114.114
 server=/leisu123.com/114.114.114.114
 server=/leisuapi.com/114.114.114.114
+server=/leisure-expo.org/114.114.114.114
 server=/leisurelypanda.com/114.114.114.114
 server=/leitaibio.com/114.114.114.114
 server=/leiting.com/114.114.114.114
