--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69088,6 +69088,7 @@ server=/pkurc.com/114.114.114.114
 server=/pkusky.com/114.114.114.114
 server=/pkusp.com/114.114.114.114
 server=/pkuszh.com/114.114.114.114
+server=/pkutourism.com/114.114.114.114
 server=/pkvs.com/114.114.114.114
 server=/pkwenku.com/114.114.114.114
 server=/pl520.com/114.114.114.114
