accelerated-domains: add sxhlfjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81048,6 +81048,7 @@ server=/sxhhyy.com/114.114.114.114
 server=/sxhimalayanqd.com/114.114.114.114
 server=/sxhiway.com/114.114.114.114
 server=/sxhlcc.com/114.114.114.114
+server=/sxhlfjt.com/114.114.114.114
 server=/sxhlxy.com/114.114.114.114
 server=/sxhm.com/114.114.114.114
 server=/sxhmyy.com/114.114.114.114
