accelerated-domains: add powerflow-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69426,6 +69426,7 @@ server=/powercx.com/114.114.114.114
 server=/powerde.com/114.114.114.114
 server=/powereasy.net/114.114.114.114
 server=/powerex1.com/114.114.114.114
+server=/powerflow-tech.com/114.114.114.114
 server=/poweric-china.com/114.114.114.114
 server=/powerlandtech.com/114.114.114.114
 server=/powerlaw.ai/114.114.114.114
