accelerated-domains: add cnonjx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22620,6 +22620,7 @@ server=/cnoil.com/114.114.114.114
 server=/cnolnic.com/114.114.114.114
 server=/cnolnic.net/114.114.114.114
 server=/cnolnic.org/114.114.114.114
+server=/cnonjx.com/114.114.114.114
 server=/cnonline.org/114.114.114.114
 server=/cnoocengineering.com/114.114.114.114
 server=/cnoocltd.com/114.114.114.114
