accelerated-domains: add qinglianfood.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71026,6 +71026,7 @@ server=/qinglan.info/114.114.114.114
 server=/qinglanbaseunicast.com/114.114.114.114
 server=/qinglanji.com/114.114.114.114
 server=/qingle.xyz/114.114.114.114
+server=/qinglianfood.com/114.114.114.114
 server=/qingliange.com/114.114.114.114
 server=/qingliangkeji.com/114.114.114.114
 server=/qinglidashi.com/114.114.114.114
