--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12490,6 +12490,7 @@ server=/avicsec.com/114.114.114.114
 server=/avicsgt.com/114.114.114.114
 server=/avicui.com/114.114.114.114
 server=/avidbird.com/114.114.114.114
+server=/avilive.com/114.114.114.114
 server=/avinex.com/114.114.114.114
 server=/avivaqueen.com/114.114.114.114
 server=/avjb.com/114.114.114.114
