accelerated-domains: add ecdag.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29266,6 +29266,7 @@ server=/eccn.com/114.114.114.114
 server=/eccnmall.com/114.114.114.114
 server=/ecco-market.com/114.114.114.114
 server=/eccpos.com/114.114.114.114
+server=/ecdag.net/114.114.114.114
 server=/ecdnx.com/114.114.114.114
 server=/ecdpower.net/114.114.114.114
 server=/ecduo.com/114.114.114.114
