accelerated-domains: add zhechem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102402,6 +102402,7 @@ server=/zhe97.com/114.114.114.114
 server=/zhebei.com/114.114.114.114
 server=/zhebeipharm.com/114.114.114.114
 server=/zhebumai.com/114.114.114.114
+server=/zhechem.com/114.114.114.114
 server=/zhefengle.com/114.114.114.114
 server=/zhehengsteel.com/114.114.114.114
 server=/zheishui.com/114.114.114.114
