accelerated-domains: add qhyh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70536,6 +70536,7 @@ server=/qhwptyn.com/114.114.114.114
 server=/qhwww.com/114.114.114.114
 server=/qhxyms.com/114.114.114.114
 server=/qhyccd.com/114.114.114.114
+server=/qhyh.com/114.114.114.114
 server=/qhyimin.com/114.114.114.114
 server=/qhylns.com/114.114.114.114
 server=/qhytyyvx.com/114.114.114.114
