--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44506,6 +44506,7 @@ server=/hualiandie.com/114.114.114.114
 server=/hualiandressing.com/114.114.114.114
 server=/hualiantv.com/114.114.114.114
 server=/hualianxin.com/114.114.114.114
+server=/hualing-pm.com/114.114.114.114
 server=/hualingjiangong.com/114.114.114.114
 server=/hualiuniversity.com/114.114.114.114
 server=/hualongxiang.com/114.114.114.114
