accelerated-domains: add hymater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45789,6 +45789,7 @@ server=/hylicreate.com/114.114.114.114
 server=/hylik.net/114.114.114.114
 server=/hylname.com/114.114.114.114
 server=/hymall.net/114.114.114.114
+server=/hymater.com/114.114.114.114
 server=/hymcu.com/114.114.114.114
 server=/hymicrofiber.com/114.114.114.114
 server=/hymicrosystem.com/114.114.114.114
