accelerated-domains: add ttpharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85204,6 +85204,7 @@ server=/ttpaicdn.com/114.114.114.114
 server=/ttpaihang.com/114.114.114.114
 server=/ttpaper.com/114.114.114.114
 server=/ttpet.com/114.114.114.114
+server=/ttpharm.com/114.114.114.114
 server=/ttplayer.co/114.114.114.114
 server=/ttplayer.com/114.114.114.114
 server=/ttpod.com/114.114.114.114
