accelerated-domains: add orientgene.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67483,6 +67483,7 @@ server=/orientalwisdom.com/114.114.114.114
 server=/orientcasa.com/114.114.114.114
 server=/orientengg.com/114.114.114.114
 server=/orientfoods.net/114.114.114.114
+server=/orientgene.com/114.114.114.114
 server=/orientgolf.com/114.114.114.114
 server=/orientpc.com/114.114.114.114
 server=/orientpowertech.com/114.114.114.114
