--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26162,6 +26162,7 @@ server=/deyatech.com/114.114.114.114
 server=/deyayk.com/114.114.114.114
 server=/deyecloud.com/114.114.114.114
 server=/deyeehome.com/114.114.114.114
+server=/deyerchem.com/114.114.114.114
 server=/deyi.com/114.114.114.114
 server=/deyi.net/114.114.114.114
 server=/deyicc.com/114.114.114.114
