accelerated-domains: add zj-huishi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103837,6 +103837,7 @@ server=/zj-gold.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
 server=/zj-hc168.com/114.114.114.114
 server=/zj-huawei.com/114.114.114.114
+server=/zj-huishi.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
 server=/zj-jc.com/114.114.114.114
