accelerated-domains: add huaruiaero.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44676,6 +44676,7 @@ server=/huari.com/114.114.114.114
 server=/huaroem.com/114.114.114.114
 server=/huarongdao.com/114.114.114.114
 server=/huarongled.com/114.114.114.114
+server=/huaruiaero.com/114.114.114.114
 server=/huaruicom.com/114.114.114.114
 server=/huaruidns.com/114.114.114.114
 server=/huas.co/114.114.114.114
