--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103842,6 +103842,7 @@ server=/zj-huishi.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
 server=/zj-jc.com/114.114.114.114
+server=/zj-jinchen.com/114.114.114.114
 server=/zj-jingyang.com/114.114.114.114
 server=/zj-lenor.com/114.114.114.114
 server=/zj-mgs.com/114.114.114.114
