--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19934,6 +19934,7 @@ server=/china-sites.com/114.114.114.114
 server=/china-slate.com/114.114.114.114
 server=/china-sop.com/114.114.114.114
 server=/china-sorsa.org/114.114.114.114
+server=/china-springs.com/114.114.114.114
 server=/china-sss.com/114.114.114.114
 server=/china-stainless.com/114.114.114.114
 server=/china-sz.com/114.114.114.114
