--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103986,6 +103986,7 @@ server=/zjhdchem.com/114.114.114.114
 server=/zjhdcs.com/114.114.114.114
 server=/zjhejiang.com/114.114.114.114
 server=/zjheliang.com/114.114.114.114
+server=/zjhengyida.com/114.114.114.114
 server=/zjhfxcl.com/114.114.114.114
 server=/zjhi.net/114.114.114.114
 server=/zjhjzy.com/114.114.114.114
