--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103900,6 +103900,7 @@ server=/zjcb.com/114.114.114.114
 server=/zjcbank.com/114.114.114.114
 server=/zjcbcm.com/114.114.114.114
 server=/zjcbjy.com/114.114.114.114
+server=/zjcbl.com/114.114.114.114
 server=/zjcdn.com/114.114.114.114
 server=/zjcgmetal.com/114.114.114.114
 server=/zjchina.org/114.114.114.114
