--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104164,6 +104164,7 @@ server=/zjrugao.com/114.114.114.114
 server=/zjrunqiang.com/114.114.114.114
 server=/zjsairport.com/114.114.114.114
 server=/zjsaisi.com/114.114.114.114
+server=/zjsaisiet.com/114.114.114.114
 server=/zjsanji.com/114.114.114.114
 server=/zjsanma.com/114.114.114.114
 server=/zjsaz.com/114.114.114.114
