accelerated-domains: add hunaen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45255,6 +45255,7 @@ server=/humengyun.com/114.114.114.114
 server=/humensec.com/114.114.114.114
 server=/huming.com/114.114.114.114
 server=/hummcars.com/114.114.114.114
+server=/hunaen.com/114.114.114.114
 server=/hunanbestall.com/114.114.114.114
 server=/hunancatv.com/114.114.114.114
 server=/hunangy.com/114.114.114.114
