--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81067,6 +81067,7 @@ server=/sxhm.com/114.114.114.114
 server=/sxhmyy.com/114.114.114.114
 server=/sxhospital.com/114.114.114.114
 server=/sxhtss.com/114.114.114.114
+server=/sxhtyy.net/114.114.114.114
 server=/sxhwls.com/114.114.114.114
 server=/sxhxbank.com/114.114.114.114
 server=/sxinrj.com/114.114.114.114
