accelerated-domains: add zjzhenyou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104310,6 +104310,7 @@ server=/zjzhd.com/114.114.114.114
 server=/zjzhengding.com/114.114.114.114
 server=/zjzhengxingyiyuan.com/114.114.114.114
 server=/zjzhengyao.com/114.114.114.114
+server=/zjzhenyou.com/114.114.114.114
 server=/zjzhitan.com/114.114.114.114
 server=/zjzhonglan.com/114.114.114.114
 server=/zjzhongtian.com/114.114.114.114
