--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22862,6 +22862,7 @@ server=/cnxos.com/114.114.114.114
 server=/cnxuntu.com/114.114.114.114
 server=/cnxyk.com/114.114.114.114
 server=/cnxzm.com/114.114.114.114
+server=/cnyada.net/114.114.114.114
 server=/cnyanglao.com/114.114.114.114
 server=/cnyibs.com/114.114.114.114
 server=/cnyings.com/114.114.114.114
