--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103079,6 +103079,7 @@ server=/zhongkaiedu.com/114.114.114.114
 server=/zhongkao.com/114.114.114.114
 server=/zhongkaohelp.com/114.114.114.114
 server=/zhongkaowu.com/114.114.114.114
+server=/zhongkecn.com/114.114.114.114
 server=/zhongkeguan.com/114.114.114.114
 server=/zhongkekc.com/114.114.114.114
 server=/zhongkerd.com/114.114.114.114
