--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103927,6 +103927,7 @@ server=/zjcuhb.com/114.114.114.114
 server=/zjcxbank.com/114.114.114.114
 server=/zjcywx.com/114.114.114.114
 server=/zjcyyy.com/114.114.114.114
+server=/zjdadeyy.com/114.114.114.114
 server=/zjdashi.com/114.114.114.114
 server=/zjdata.net/114.114.114.114
 server=/zjdetong.com/114.114.114.114
