accelerated-domains: add hangzhouzehe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40457,6 +40457,7 @@ server=/hangzhoutianqi114.com/114.114.114.114
 server=/hangzhouweifeng.com/114.114.114.114
 server=/hangzhouyiyao.com/114.114.114.114
 server=/hangzhouyq.com/114.114.114.114
+server=/hangzhouzehe.com/114.114.114.114
 server=/hangzhouzhiqi.com/114.114.114.114
 server=/hangzyuyuan.com/114.114.114.114
 server=/hanhai.net/114.114.114.114
