accelerated-domains: add jhenten.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49835,6 +49835,7 @@ server=/jhdmro.com/114.114.114.114
 server=/jhdpower.com/114.114.114.114
 server=/jhdxjk.com/114.114.114.114
 server=/jhedu.tv/114.114.114.114
+server=/jhenten.com/114.114.114.114
 server=/jhfl.com/114.114.114.114
 server=/jhforever.com/114.114.114.114
 server=/jhfsata.com/114.114.114.114
