--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49861,6 +49861,7 @@ server=/jhnsyh.com/114.114.114.114
 server=/jhonge.net/114.114.114.114
 server=/jhonse.com/114.114.114.114
 server=/jhotel-shanghai.com/114.114.114.114
+server=/jhpm.cc/114.114.114.114
 server=/jhqrmyy.com/114.114.114.114
 server=/jhqshfly.com/114.114.114.114
 server=/jhrcbank.com/114.114.114.114
