accelerated-domains: add hemeiauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41919,6 +41919,7 @@ server=/hemayouxi.com/114.114.114.114
 server=/hemayouxi.net/114.114.114.114
 server=/hemayun.com/114.114.114.114
 server=/hemayx.com/114.114.114.114
+server=/hemeiauto.com/114.114.114.114
 server=/hempelgroup.com/114.114.114.114
 server=/hen360.com/114.114.114.114
 server=/henai.com/114.114.114.114
