accelerated-domains: add chinazjgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20710,6 +20710,7 @@ server=/chinazhifu.com/114.114.114.114
 server=/chinazhijiang.com/114.114.114.114
 server=/chinazhixiong.com/114.114.114.114
 server=/chinazikao.com/114.114.114.114
+server=/chinazjgc.com/114.114.114.114
 server=/chinazjph.com/114.114.114.114
 server=/chinazjy.com/114.114.114.114
 server=/chinazkjc.com/114.114.114.114
