accelerated-domains: add tceratronix.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82697,6 +82697,7 @@ server=/tcdushi.com/114.114.114.114
 server=/tcdxt.com/114.114.114.114
 server=/tcecps.org/114.114.114.114
 server=/tceic.com/114.114.114.114
+server=/tceratronix.com/114.114.114.114
 server=/tcfhty.com/114.114.114.114
 server=/tcgcardgame.com/114.114.114.114
 server=/tcggkj.com/114.114.114.114
