--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57024,6 +57024,7 @@ server=/leyonb.com/114.114.114.114
 server=/leyoujia.com/114.114.114.114
 server=/leyouquan.com/114.114.114.114
 server=/leyu.com/114.114.114.114
+server=/leyuanhr.com/114.114.114.114
 server=/leyue100.com/114.114.114.114
 server=/leyuglobal.com/114.114.114.114
 server=/leyun001.com/114.114.114.114
