accelerated-domains: add dajan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25081,6 +25081,7 @@ server=/daiyanmama.com/114.114.114.114
 server=/daiyinzi.com/114.114.114.114
 server=/daizitouxiang.com/114.114.114.114
 server=/daizitu.ren/114.114.114.114
+server=/dajan.com/114.114.114.114
 server=/dajiabao.com/114.114.114.114
 server=/dajiachou.com/114.114.114.114
 server=/dajiadou6.com/114.114.114.114
