accelerated-domains: add ehrel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29723,6 +29723,7 @@ server=/ehouse411.com/114.114.114.114
 server=/ehousechina.com/114.114.114.114
 server=/ehowbuy.com/114.114.114.114
 server=/ehowbuy.net/114.114.114.114
+server=/ehrel.com/114.114.114.114
 server=/ehsy.com/114.114.114.114
 server=/ehtcn.com/114.114.114.114
 server=/ehtttop.com/114.114.114.114
