--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54214,6 +54214,7 @@ server=/keruibell.com/114.114.114.114
 server=/keruiiai.com/114.114.114.114
 server=/keruilai.com/114.114.114.114
 server=/keruilait.com/114.114.114.114
+server=/keruisifan.com/114.114.114.114
 server=/kerun2010.com/114.114.114.114
 server=/keruna.com/114.114.114.114
 server=/kerundegroup.net/114.114.114.114
