accelerated-domains: add yz-li.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101118,6 +101118,7 @@ server=/yyzy-play.vip/114.114.114.114
 server=/yyzyytj.com/114.114.114.114
 server=/yyzzsem.com/114.114.114.114
 server=/yz-iot.com/114.114.114.114
+server=/yz-li.com/114.114.114.114
 server=/yz-machinery.com/114.114.114.114
 server=/yz-proton.com/114.114.114.114
 server=/yz-show.com/114.114.114.114
