--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80428,6 +80428,7 @@ server=/sufoma.com/114.114.114.114
 server=/sufont.com/114.114.114.114
 server=/sugaov.com/114.114.114.114
 server=/sugarall365.com/114.114.114.114
+server=/sugarenergy.com/114.114.114.114
 server=/sugarguo.com/114.114.114.114
 server=/sugarle.com/114.114.114.114
 server=/sugessofficial.com/114.114.114.114
