accelerated-domains: add zsfzjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104915,6 +104915,7 @@ server=/zsex.ltd/114.114.114.114
 server=/zsezt.com/114.114.114.114
 server=/zsfund.com/114.114.114.114
 server=/zsfyedu.com/114.114.114.114
+server=/zsfzjs.com/114.114.114.114
 server=/zsg6.com/114.114.114.114
 server=/zsgcgj.com/114.114.114.114
 server=/zsgd.com/114.114.114.114
