accelerated-domains: add aoguansteel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11527,6 +11527,7 @@ server=/aogk88.asia/114.114.114.114
 server=/aogocorp.com/114.114.114.114
 server=/aograph.com/114.114.114.114
 server=/aoguan.com/114.114.114.114
+server=/aoguansteel.com/114.114.114.114
 server=/aoguanwns.com/114.114.114.114
 server=/aohaosiyq.com/114.114.114.114
 server=/aohuasports.com/114.114.114.114
