--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27755,6 +27755,7 @@ server=/doubaozhidao.com/114.114.114.114
 server=/doubean.com/114.114.114.114
 server=/doubilm.com/114.114.114.114
 server=/doubimeizhi.com/114.114.114.114
+server=/doublearrow.net/114.114.114.114
 server=/doubleeagle-group.com/114.114.114.114
 server=/doublestarmingren.com/114.114.114.114
 server=/doublewin123.com/114.114.114.114
