--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48039,6 +48039,7 @@ server=/insarticle.com/114.114.114.114
 server=/insenz.com/114.114.114.114
 server=/inshotapp.com/114.114.114.114
 server=/insidestuffs.com/114.114.114.114
+server=/insigma-elec.com/114.114.114.114
 server=/insmoin.com/114.114.114.114
 server=/insnail.com/114.114.114.114
 server=/insneu.com/114.114.114.114
