--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104111,6 +104111,7 @@ server=/zjldrcb.com/114.114.114.114
 server=/zjledfbd.com/114.114.114.114
 server=/zjlepu.com/114.114.114.114
 server=/zjleyi.com/114.114.114.114
+server=/zjlfdq.com/114.114.114.114
 server=/zjlianchi.com/114.114.114.114
 server=/zjlianyingkj.com/114.114.114.114
 server=/zjlindu.com/114.114.114.114
