accelerated-domains: add delingkeji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25983,6 +25983,7 @@ server=/delibao.com/114.114.114.114
 server=/delicloud.com/114.114.114.114
 server=/delilegal.com/114.114.114.114
 server=/delin-sh.com/114.114.114.114
+server=/delingkeji.com/114.114.114.114
 server=/delinklab.com/114.114.114.114
 server=/delipu.cc/114.114.114.114
 server=/delishi.com/114.114.114.114
