--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64341,6 +64341,7 @@ server=/nbkc-rp.com/114.114.114.114
 server=/nbkjjx.com/114.114.114.114
 server=/nblhlyy.com/114.114.114.114
 server=/nblongzhan.com/114.114.114.114
+server=/nblwhb.com/114.114.114.114
 server=/nbmai.com/114.114.114.114
 server=/nbmedicalsystem.com/114.114.114.114
 server=/nbmiao.com/114.114.114.114
