--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103967,6 +103967,7 @@ server=/zje.com/114.114.114.114
 server=/zjeagles.com/114.114.114.114
 server=/zjeclean.com/114.114.114.114
 server=/zjedps.com/114.114.114.114
+server=/zjedu.com/114.114.114.114
 server=/zjedu.org/114.114.114.114
 server=/zjemec.com/114.114.114.114
 server=/zjeq.com/114.114.114.114
