accelerated-domains: add ztzcnc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105107,6 +105107,7 @@ server=/ztxygj.com/114.114.114.114
 server=/ztxz.cc/114.114.114.114
 server=/ztxzsjt.com/114.114.114.114
 server=/ztyang.com/114.114.114.114
+server=/ztzcnc.com/114.114.114.114
 server=/ztzhbw.com/114.114.114.114
 server=/ztzhgw.com/114.114.114.114
 server=/ztzhsq.com/114.114.114.114
