--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77624,6 +77624,7 @@ server=/shuajige.net/114.114.114.114
 server=/shuajizhijia.net/114.114.114.114
 server=/shuakazhijia.com/114.114.114.114
 server=/shuame.com/114.114.114.114
+server=/shuang-feng.com/114.114.114.114
 server=/shuangda-pump.com/114.114.114.114
 server=/shuanghui.net/114.114.114.114
 server=/shuangjing.net/114.114.114.114
