accelerated-domains: add shunygroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77836,6 +77836,7 @@ server=/shuntongtong.com/114.114.114.114
 server=/shunwang.com/114.114.114.114
 server=/shunwoit.com/114.114.114.114
 server=/shunxindt.com/114.114.114.114
+server=/shunygroup.com/114.114.114.114
 server=/shunyoubio.com/114.114.114.114
 server=/shunyuwater.com/114.114.114.114
 server=/shuo66.com/114.114.114.114
