--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104315,6 +104315,7 @@ server=/zjyari.com/114.114.114.114
 server=/zjycpx.com/114.114.114.114
 server=/zjydt.com/114.114.114.114
 server=/zjyingcai.com/114.114.114.114
+server=/zjyinzuo.com/114.114.114.114
 server=/zjyiot.com/114.114.114.114
 server=/zjyiyuan.com/114.114.114.114
 server=/zjyoutian.com/114.114.114.114
