--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33261,6 +33261,7 @@ server=/furrychina.com/114.114.114.114
 server=/furuijiaju.vip/114.114.114.114
 server=/fusaide.com/114.114.114.114
 server=/fushengal.com/114.114.114.114
+server=/fushite.com/114.114.114.114
 server=/fusiling.com/114.114.114.114
 server=/fusion-inte.com/114.114.114.114
 server=/fusion.design/114.114.114.114
