accelerated-domains: add zjxzgrd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104312,6 +104312,7 @@ server=/zjxwjs.com/114.114.114.114
 server=/zjxwtoy.com/114.114.114.114
 server=/zjxxkx.com/114.114.114.114
 server=/zjxymy.com/114.114.114.114
+server=/zjxzgrd.com/114.114.114.114
 server=/zjyanxing.com/114.114.114.114
 server=/zjyari.com/114.114.114.114
 server=/zjycpx.com/114.114.114.114
