accelerated-domains: add zj-equation.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103859,6 +103859,7 @@ server=/zizizizizi.com/114.114.114.114
 server=/zizzs.com/114.114.114.114
 server=/zj-art.com/114.114.114.114
 server=/zj-echo.com/114.114.114.114
+server=/zj-equation.com/114.114.114.114
 server=/zj-fhzx.com/114.114.114.114
 server=/zj-gold.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
