accelerated-domains: add zjyonder.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104322,6 +104322,7 @@ server=/zjyingcai.com/114.114.114.114
 server=/zjyinzuo.com/114.114.114.114
 server=/zjyiot.com/114.114.114.114
 server=/zjyiyuan.com/114.114.114.114
+server=/zjyonder.com/114.114.114.114
 server=/zjyoutian.com/114.114.114.114
 server=/zjyq.cc/114.114.114.114
 server=/zjystec.com/114.114.114.114
