accelerated-domains: add qlnonwoven.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71482,6 +71482,7 @@ server=/qlippie.com/114.114.114.114
 server=/qlivecdn.com/114.114.114.114
 server=/qll-times.com/114.114.114.114
 server=/qlmoney.com/114.114.114.114
+server=/qlnonwoven.com/114.114.114.114
 server=/qlotc.net/114.114.114.114
 server=/qlrc.com/114.114.114.114
 server=/qls.fun/114.114.114.114
