accelerated-domains: add xinke-semi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94128,6 +94128,7 @@ server=/xinjuc.com/114.114.114.114
 server=/xinjunshi.net/114.114.114.114
 server=/xinjunshicn.net/114.114.114.114
 server=/xinkaiyuanceps.com/114.114.114.114
+server=/xinke-semi.com/114.114.114.114
 server=/xinkejiaotong.com/114.114.114.114
 server=/xinkuai.com/114.114.114.114
 server=/xinkunshan.com/114.114.114.114
