--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101656,6 +101656,7 @@ server=/zdnscloud.com/114.114.114.114
 server=/zdnscloud.info/114.114.114.114
 server=/zdnscloud.net/114.114.114.114
 server=/zdomo.com/114.114.114.114
+server=/zdong.net/114.114.114.114
 server=/zdpower.com/114.114.114.114
 server=/zdrcw.com/114.114.114.114
 server=/zds22.com/114.114.114.114
