accelerated-domains: add chenlong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19625,6 +19625,7 @@ server=/chenlianfu.com/114.114.114.114
 server=/chenliangroup.com/114.114.114.114
 server=/chenlinux.com/114.114.114.114
 server=/chenlinzuwu.com/114.114.114.114
+server=/chenlong.com/114.114.114.114
 server=/chenmomo.com/114.114.114.114
 server=/chenmozz.cc/114.114.114.114
 server=/chennianyoupin.com/114.114.114.114
