accelerated-domains: add 81lcd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7503,6 +7503,7 @@ server=/81guofang.com/114.114.114.114
 server=/81it.com/114.114.114.114
 server=/81js.net/114.114.114.114
 server=/81kx.com/114.114.114.114
+server=/81lcd.com/114.114.114.114
 server=/81man.com/114.114.114.114
 server=/81pan.com/114.114.114.114
 server=/81tech.com/114.114.114.114
