--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54181,6 +54181,7 @@ server=/ken.io/114.114.114.114
 server=/kename.com/114.114.114.114
 server=/kendingde.com/114.114.114.114
 server=/kendryte.com/114.114.114.114
+server=/keneng.org/114.114.114.114
 server=/kenflo.com/114.114.114.114
 server=/kenfor.com/114.114.114.114
 server=/kengatoki.com/114.114.114.114
