accelerated-domains: add nanhujianshe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64117,6 +64117,7 @@ server=/nanhua.net/114.114.114.114
 server=/nanhuafunds.com/114.114.114.114
 server=/nanhuangic.com/114.114.114.114
 server=/nanhufund.com/114.114.114.114
+server=/nanhujianshe.com/114.114.114.114
 server=/nanhuwang.com/114.114.114.114
 server=/nanjet.com/114.114.114.114
 server=/nanjing-pharma.com/114.114.114.114
