accelerated-domains: add china-tongyu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19944,6 +19944,7 @@ server=/china-sz.com/114.114.114.114
 server=/china-thk.com/114.114.114.114
 server=/china-tin.com/114.114.114.114
 server=/china-tje.com/114.114.114.114
+server=/china-tongyu.com/114.114.114.114
 server=/china-topplus.com/114.114.114.114
 server=/china-tops.com/114.114.114.114
 server=/china-touch.com/114.114.114.114
