accelerated-domains: add dlxmicro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27186,6 +27186,7 @@ server=/dlwmkj.com/114.114.114.114
 server=/dlwx369.com/114.114.114.114
 server=/dlxgjy.com/114.114.114.114
 server=/dlxk.com/114.114.114.114
+server=/dlxmicro.com/114.114.114.114
 server=/dlxww.com/114.114.114.114
 server=/dlyiliang.com/114.114.114.114
 server=/dlyll.com/114.114.114.114
