--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96653,6 +96653,7 @@ server=/yanfengauto.com/114.114.114.114
 server=/yanfukun.com/114.114.114.114
 server=/yang99.fun/114.114.114.114
 server=/yangbentong.com/114.114.114.114
+server=/yangchanji.com/114.114.114.114
 server=/yangchenglianhe.com/114.114.114.114
 server=/yangcheyongche.com/114.114.114.114
 server=/yangchunjian.com/114.114.114.114
