--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22308,6 +22308,7 @@ server=/cndss.net/114.114.114.114
 server=/cndtour.com/114.114.114.114
 server=/cndw.com/114.114.114.114
 server=/cndy.org/114.114.114.114
+server=/cndzh.com/114.114.114.114
 server=/cndzq.com/114.114.114.114
 server=/cndzys.com/114.114.114.114
 server=/cne-motor.com/114.114.114.114
