--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102313,6 +102313,7 @@ server=/zhanuan.com/114.114.114.114
 server=/zhanxingfang.com/114.114.114.114
 server=/zhanyaxi.com/114.114.114.114
 server=/zhanyouyun.com/114.114.114.114
+server=/zhanyugroup.com/114.114.114.114
 server=/zhanzhanbao.com/114.114.114.114
 server=/zhanzhang.net/114.114.114.114
 server=/zhanzhangb.com/114.114.114.114
