accelerated-domains: add zhejianghanpu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102453,6 +102453,7 @@ server=/zheishui.com/114.114.114.114
 server=/zheiyu.com/114.114.114.114
 server=/zhejiangcheng.com/114.114.114.114
 server=/zhejiangfc1998.com/114.114.114.114
+server=/zhejianghanpu.com/114.114.114.114
 server=/zhejianglab.com/114.114.114.114
 server=/zhejiangliming.com/114.114.114.114
 server=/zhejianglong.com/114.114.114.114
