--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20685,6 +20685,7 @@ server=/chinaxzrc.com/114.114.114.114
 server=/chinayadea.com/114.114.114.114
 server=/chinayanghe.com/114.114.114.114
 server=/chinayanming.com/114.114.114.114
+server=/chinayaojiang.com/114.114.114.114
 server=/chinayarn.com/114.114.114.114
 server=/chinaybx.com/114.114.114.114
 server=/chinaygj.com/114.114.114.114
