--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26084,6 +26084,7 @@ server=/deshaus.com/114.114.114.114
 server=/desheng-edu.com/114.114.114.114
 server=/desheng.net/114.114.114.114
 server=/deshenghonglan.com/114.114.114.114
+server=/deshengzj.com/114.114.114.114
 server=/deshicheng.com/114.114.114.114
 server=/design-engine.org/114.114.114.114
 server=/design.citic/114.114.114.114
