accelerated-domains: add opal-qt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67342,6 +67342,7 @@ server=/ooyyee.com/114.114.114.114
 server=/op86.net/114.114.114.114
 server=/opadlink.com/114.114.114.114
 server=/opahnet.com/114.114.114.114
+server=/opal-qt.com/114.114.114.114
 server=/opark.com/114.114.114.114
 server=/opatseg.com/114.114.114.114
 server=/opcool.com/114.114.114.114
