--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54489,6 +54489,7 @@ server=/kinqee.com/114.114.114.114
 server=/kinsec.com/114.114.114.114
 server=/kinte-ind.com/114.114.114.114
 server=/kintiger.com/114.114.114.114
+server=/kintn.com/114.114.114.114
 server=/kintowe.com/114.114.114.114
 server=/kinval.com/114.114.114.114
 server=/kinzhan.com/114.114.114.114
