--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20318,6 +20318,7 @@ server=/chinajcz.com/114.114.114.114
 server=/chinajeweler.com/114.114.114.114
 server=/chinajienuo.com/114.114.114.114
 server=/chinajincity.com/114.114.114.114
+server=/chinajinguo.com/114.114.114.114
 server=/chinajinlong.com/114.114.114.114
 server=/chinajinzhan.com/114.114.114.114
 server=/chinajinzhou.com/114.114.114.114
