accelerated-domains: add tenag.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83002,6 +83002,7 @@ server=/temch.net/114.114.114.114
 server=/temox.com/114.114.114.114
 server=/temp.im/114.114.114.114
 server=/temut1.com/114.114.114.114
+server=/tenag.com/114.114.114.114
 server=/tenbilliongame.com/114.114.114.114
 server=/tencdns.com/114.114.114.114
 server=/tencdns.net/114.114.114.114
