accelerated-domains: add zjctm.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103967,6 +103967,7 @@ server=/zjcrcgas.com/114.114.114.114
 server=/zjcrjzj.com/114.114.114.114
 server=/zjcshjt.com/114.114.114.114
 server=/zjctct.com/114.114.114.114
+server=/zjctm.net/114.114.114.114
 server=/zjcuhb.com/114.114.114.114
 server=/zjcxbank.com/114.114.114.114
 server=/zjcywx.com/114.114.114.114
