accelerated-domains: add zjhcly.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104035,6 +104035,7 @@ server=/zjharbor.com/114.114.114.114
 server=/zjhbdlkj.com/114.114.114.114
 server=/zjhby.com/114.114.114.114
 server=/zjhcbank.com/114.114.114.114
+server=/zjhcly.com/114.114.114.114
 server=/zjhdchem.com/114.114.114.114
 server=/zjhdcs.com/114.114.114.114
 server=/zjhejiang.com/114.114.114.114
