accelerated-domains: add zjzj.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104369,6 +104369,7 @@ server=/zjzhenyou.com/114.114.114.114
 server=/zjzhitan.com/114.114.114.114
 server=/zjzhonglan.com/114.114.114.114
 server=/zjzhongtian.com/114.114.114.114
+server=/zjzj.net/114.114.114.114
 server=/zjzj.org/114.114.114.114
 server=/zjzjhotel.com/114.114.114.114
 server=/zjzjjx.com/114.114.114.114
