accelerated-domains: add jinlanzuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50891,6 +50891,7 @@ server=/jinkunlaw.com/114.114.114.114
 server=/jinlaiba.com/114.114.114.114
 server=/jinlaijinwang.com/114.114.114.114
 server=/jinlangbo.com/114.114.114.114
+server=/jinlanzuan.com/114.114.114.114
 server=/jinleijx.com/114.114.114.114
 server=/jinletx.com/114.114.114.114
 server=/jinlianchu.com/114.114.114.114
