--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66901,6 +66901,7 @@ server=/odaily.news/114.114.114.114
 server=/odalong.com/114.114.114.114
 server=/odao.com/114.114.114.114
 server=/oddyqw.com/114.114.114.114
+server=/odeasports.com/114.114.114.114
 server=/odict.net/114.114.114.114
 server=/odinichina.com/114.114.114.114
 server=/odinjc.com/114.114.114.114
