--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85829,6 +85829,7 @@ server=/tydns.cc/114.114.114.114
 server=/tyfc.xyz/114.114.114.114
 server=/tyfo.com/114.114.114.114
 server=/tygameworld.com/114.114.114.114
+server=/tygckj.com/114.114.114.114
 server=/tyguocao.com/114.114.114.114
 server=/tyhjzx.com/114.114.114.114
 server=/tyi365.com/114.114.114.114
