accelerated-domains: add zjdeju.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103980,6 +103980,7 @@ server=/zjcyyy.com/114.114.114.114
 server=/zjdadeyy.com/114.114.114.114
 server=/zjdashi.com/114.114.114.114
 server=/zjdata.net/114.114.114.114
+server=/zjdeju.com/114.114.114.114
 server=/zjdetong.com/114.114.114.114
 server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
