accelerated-domains: add cotek-robotics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23370,6 +23370,7 @@ server=/cosplay8.com/114.114.114.114
 server=/cosplayla.com/114.114.114.114
 server=/cosyjoy.com/114.114.114.114
 server=/cosz.com/114.114.114.114
+server=/cotek-robotics.com/114.114.114.114
 server=/cotong.com/114.114.114.114
 server=/cotticoffee.com/114.114.114.114
 server=/cotv.tv/114.114.114.114
