accelerated-domains: add jhconba.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49848,6 +49848,7 @@ server=/jhcb.net/114.114.114.114
 server=/jhcfz.com/114.114.114.114
 server=/jhcheku.com/114.114.114.114
 server=/jhcms.com/114.114.114.114
+server=/jhconba.com/114.114.114.114
 server=/jhctbank.com/114.114.114.114
 server=/jhddsz.com/114.114.114.114
 server=/jhdmro.com/114.114.114.114
