accelerated-domains: add zxhuman.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105447,6 +105447,7 @@ server=/zxhnzq.com/114.114.114.114
 server=/zxhong.com/114.114.114.114
 server=/zxhospital.com/114.114.114.114
 server=/zxhsd.com/114.114.114.114
+server=/zxhuman.com/114.114.114.114
 server=/zxhwzm.com/114.114.114.114
 server=/zxiaoxiang.com/114.114.114.114
 server=/zxicrm.com/114.114.114.114
