accelerated-domains: add china-hulong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19867,6 +19867,7 @@ server=/china-hongfei.com/114.114.114.114
 server=/china-hp.com/114.114.114.114
 server=/china-hrg.com/114.114.114.114
 server=/china-huazhou.com/114.114.114.114
+server=/china-hulong.com/114.114.114.114
 server=/china-hxzb.com/114.114.114.114
 server=/china-hzd.com/114.114.114.114
 server=/china-indium.com/114.114.114.114
