accelerated-domains: add joysunsh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52000,6 +52000,7 @@ server=/joyshebao.com/114.114.114.114
 server=/joyslink.com/114.114.114.114
 server=/joyssl.com/114.114.114.114
 server=/joysung.com/114.114.114.114
+server=/joysunsh.com/114.114.114.114
 server=/joytest.org/114.114.114.114
 server=/joytourvip.com/114.114.114.114
 server=/joytrav.com/114.114.114.114
