accelerated-domains: add renew-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73199,6 +73199,7 @@ server=/rendoc.com/114.114.114.114
 server=/renead.com/114.114.114.114
 server=/renegade-project.org/114.114.114.114
 server=/renergy-me.com/114.114.114.114
+server=/renew-cn.com/114.114.114.114
 server=/renfei.net/114.114.114.114
 server=/renfutm.com/114.114.114.114
 server=/renguokeji.com/114.114.114.114
