accelerated-domains: add syngars.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81339,6 +81339,7 @@ server=/synball.com/114.114.114.114
 server=/sync.sh/114.114.114.114
 server=/syncedoffplanet.com/114.114.114.114
 server=/syncozymes.com/114.114.114.114
+server=/syngars.com/114.114.114.114
 server=/syngenemed.com/114.114.114.114
 server=/synjones.com/114.114.114.114
 server=/synjones.net/114.114.114.114
