accelerated-domains: add knbmotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54779,6 +54779,7 @@ server=/kmzx.com/114.114.114.114
 server=/kmzx.org/114.114.114.114
 server=/kn-nanjing.com/114.114.114.114
 server=/kn120.com/114.114.114.114
+server=/knbmotor.com/114.114.114.114
 server=/knewbi.com/114.114.114.114
 server=/knewone.com/114.114.114.114
 server=/knewsmart.com/114.114.114.114
