accelerated-domains: add zj-ccmi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103891,6 +103891,7 @@ server=/zizizaizai.com/114.114.114.114
 server=/zizizizizi.com/114.114.114.114
 server=/zizzs.com/114.114.114.114
 server=/zj-art.com/114.114.114.114
+server=/zj-ccmi.com/114.114.114.114
 server=/zj-echo.com/114.114.114.114
 server=/zj-equation.com/114.114.114.114
 server=/zj-fhzx.com/114.114.114.114
