--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104227,6 +104227,7 @@ server=/zjriji.com/114.114.114.114
 server=/zjrob.com/114.114.114.114
 server=/zjrongli.com/114.114.114.114
 server=/zjrq.com/114.114.114.114
+server=/zjrqchina.com/114.114.114.114
 server=/zjrtv.vip/114.114.114.114
 server=/zjrugao.com/114.114.114.114
 server=/zjrunqiang.com/114.114.114.114
