accelerated-domains: add lmkggf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58444,6 +58444,7 @@ server=/lmjtgs.com/114.114.114.114
 server=/lmjx.net/114.114.114.114
 server=/lmjy.us/114.114.114.114
 server=/lmjzd.com/114.114.114.114
+server=/lmkggf.com/114.114.114.114
 server=/lmlc.com/114.114.114.114
 server=/lmlmvip.com/114.114.114.114
 server=/lmm8.com/114.114.114.114
