accelerated-domains: add huaye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44848,6 +44848,7 @@ server=/huayanghui.net/114.114.114.114
 server=/huayanwater.com/114.114.114.114
 server=/huayaocc.com/114.114.114.114
 server=/huayaody.com/114.114.114.114
+server=/huaye.com/114.114.114.114
 server=/huayi-ks.com/114.114.114.114
 server=/huayicn.com/114.114.114.114
 server=/huayidiaosu.com/114.114.114.114
