accelerated-domains: add scjk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75081,6 +75081,7 @@ server=/scjhyq.com/114.114.114.114
 server=/scjjdd.com/114.114.114.114
 server=/scjjn.com/114.114.114.114
 server=/scjjrb.com/114.114.114.114
+server=/scjk.com/114.114.114.114
 server=/scjmm.com/114.114.114.114
 server=/scjtfh.xyz/114.114.114.114
 server=/scjty.com/114.114.114.114
