accelerated-domains: add yangyivacuum.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96763,6 +96763,7 @@ server=/yangyi09.com/114.114.114.114
 server=/yangyi13.com/114.114.114.114
 server=/yangyi19.com/114.114.114.114
 server=/yangyingming.com/114.114.114.114
+server=/yangyivacuum.com/114.114.114.114
 server=/yangyk.com/114.114.114.114
 server=/yangyongquan.com/114.114.114.114
 server=/yangyq.net/114.114.114.114
