accelerated-domains: add zdmq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101680,6 +101680,7 @@ server=/zdlink.com/114.114.114.114
 server=/zdlpk.net/114.114.114.114
 server=/zdm.net/114.114.114.114
 server=/zdmimg.com/114.114.114.114
+server=/zdmq.com/114.114.114.114
 server=/zdmq88.com/114.114.114.114
 server=/zdmr.net/114.114.114.114
 server=/zdnph.com/114.114.114.114
