accelerated-domains: add zrfe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104915,6 +104915,7 @@ server=/zrbx.com/114.114.114.114
 server=/zrcaifu.com/114.114.114.114
 server=/zrcbank.com/114.114.114.114
 server=/zrfan.com/114.114.114.114
+server=/zrfe.com/114.114.114.114
 server=/zrfilm.com/114.114.114.114
 server=/zrhsh.com/114.114.114.114
 server=/zring.com/114.114.114.114
