--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19973,6 +19973,7 @@ server=/china-yaguang.com/114.114.114.114
 server=/china-yansheng.com/114.114.114.114
 server=/china-yd.com/114.114.114.114
 server=/china-yida.com/114.114.114.114
+server=/china-yinda.com/114.114.114.114
 server=/china-yuli.com/114.114.114.114
 server=/china-yulin.com/114.114.114.114
 server=/china-zbycg.com/114.114.114.114
