accelerated-domains: add zhjuche.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103022,6 +103022,7 @@ server=/zhjncb.com/114.114.114.114
 server=/zhjp.net/114.114.114.114
 server=/zhjtaq.com/114.114.114.114
 server=/zhjtx.com/114.114.114.114
+server=/zhjuche.com/114.114.114.114
 server=/zhjxwh.com/114.114.114.114
 server=/zhjypco.com/114.114.114.114
 server=/zhk.me/114.114.114.114
