--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104125,6 +104125,7 @@ server=/zjjlvyou8264.com/114.114.114.114
 server=/zjjm.net/114.114.114.114
 server=/zjjmtl.com/114.114.114.114
 server=/zjjn.com/114.114.114.114
+server=/zjjnzyjx.com/114.114.114.114
 server=/zjjr.com/114.114.114.114
 server=/zjjrh.com/114.114.114.114
 server=/zjjrtv.com/114.114.114.114
