--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104346,6 +104346,7 @@ server=/zjxhbj.com/114.114.114.114
 server=/zjxhgd.com/114.114.114.114
 server=/zjxhxny.com/114.114.114.114
 server=/zjxiangyou.com/114.114.114.114
+server=/zjxindongyang.com/114.114.114.114
 server=/zjxindu.com/114.114.114.114
 server=/zjxinghe.com/114.114.114.114
 server=/zjxinyun.com/114.114.114.114
