accelerated-domains: add zjpia.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104216,6 +104216,7 @@ server=/zjpcedu.com/114.114.114.114
 server=/zjpci.com/114.114.114.114
 server=/zjpec.com/114.114.114.114
 server=/zjphrcb.com/114.114.114.114
+server=/zjpia.net/114.114.114.114
 server=/zjpjmy.com/114.114.114.114
 server=/zjplan.com/114.114.114.114
 server=/zjpoetry.com/114.114.114.114
