--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104131,6 +104131,7 @@ server=/zjjrh.com/114.114.114.114
 server=/zjjrtv.com/114.114.114.114
 server=/zjjsbank.com/114.114.114.114
 server=/zjjsit.com/114.114.114.114
+server=/zjjstzhb.com/114.114.114.114
 server=/zjjtgc.com/114.114.114.114
 server=/zjjubao.com/114.114.114.114
 server=/zjjudong.com/114.114.114.114
