accelerated-domains: add danchuangglobal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25196,6 +25196,7 @@ server=/danbagui.com/114.114.114.114
 server=/danbaodan.com/114.114.114.114
 server=/dance365.com/114.114.114.114
 server=/dancf.com/114.114.114.114
+server=/danchuangglobal.com/114.114.114.114
 server=/dancihu.com/114.114.114.114
 server=/dancingcg.com/114.114.114.114
 server=/dancizhan.com/114.114.114.114
