--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104236,6 +104236,7 @@ server=/zjradiology.org/114.114.114.114
 server=/zjrc.com/114.114.114.114
 server=/zjrc.net/114.114.114.114
 server=/zjrcu.com/114.114.114.114
+server=/zjrdl.com/114.114.114.114
 server=/zjriji.com/114.114.114.114
 server=/zjrob.com/114.114.114.114
 server=/zjrongli.com/114.114.114.114
