--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73401,6 +73401,7 @@ server=/rhce.cc/114.114.114.114
 server=/rhcqmu.com/114.114.114.114
 server=/rhctwy.com/114.114.114.114
 server=/rhcyl.com/114.114.114.114
+server=/rheaeco.com/114.114.114.114
 server=/rheemchina.com/114.114.114.114
 server=/rhexe.com/114.114.114.114
 server=/rhhz.net/114.114.114.114
