accelerated-domains: add anshinko.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11343,6 +11343,7 @@ server=/ansgo.com/114.114.114.114
 server=/anshahouse.com/114.114.114.114
 server=/anshibuff.com/114.114.114.114
 server=/anshiduo.com/114.114.114.114
+server=/anshinko.com/114.114.114.114
 server=/anshunfiber.com/114.114.114.114
 server=/anshunholdinggroup.com/114.114.114.114
 server=/anshuntech.ltd/114.114.114.114
