--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69149,6 +69149,7 @@ server=/pl520.com/114.114.114.114
 server=/pl999.com/114.114.114.114
 server=/plaidc.com/114.114.114.114
 server=/plalzhang.com/114.114.114.114
+server=/planary-yz.com/114.114.114.114
 server=/planckled.com/114.114.114.114
 server=/planetariuminsight.site/114.114.114.114
 server=/planetarylighting.com/114.114.114.114
