accelerated-domains: add zjnthkg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104213,6 +104213,7 @@ server=/zjnbxzc.com/114.114.114.114
 server=/zjndjs.com/114.114.114.114
 server=/zjnrcb.com/114.114.114.114
 server=/zjnrg.com/114.114.114.114
+server=/zjnthkg.com/114.114.114.114
 server=/zjolcdn.com/114.114.114.114
 server=/zjoldns.com/114.114.114.114
 server=/zjorient.com/114.114.114.114
