--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33876,6 +33876,7 @@ server=/ganxb2.com/114.114.114.114
 server=/ganxi.com/114.114.114.114
 server=/ganxianw.com/114.114.114.114
 server=/ganxianzhi.win/114.114.114.114
+server=/ganyeah.com/114.114.114.114
 server=/ganyu8.net/114.114.114.114
 server=/ganzhe.com/114.114.114.114
 server=/ganzhishi.com/114.114.114.114
