--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77121,6 +77121,7 @@ server=/shimonote.com/114.114.114.114
 server=/shimonote.net/114.114.114.114
 server=/shimotx.com/114.114.114.114
 server=/shimowendang.com/114.114.114.114
+server=/shindaichem.com/114.114.114.114
 server=/shine-ic.com/114.114.114.114
 server=/shinechina.com/114.114.114.114
 server=/shinefeel.com/114.114.114.114
