accelerated-domains: add so03300koaq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79228,6 +79228,7 @@ server=/snzhz.com/114.114.114.114
 server=/so.car/114.114.114.114
 server=/so.com/114.114.114.114
 server=/so03290koaq.com/114.114.114.114
+server=/so03300koaq.com/114.114.114.114
 server=/so126.com/114.114.114.114
 server=/so666gslb.com/114.114.114.114
 server=/so8848.com/114.114.114.114
@@ -104785,8 +104786,8 @@ server=/zoogooy.com/114.114.114.114
 server=/zooioo.com/114.114.114.114
 server=/zookingsoft.com/114.114.114.114
 server=/zookparts.com/114.114.114.114
-#server=/zoom.us/114.114.114.114 # Disabled: https://github.com/felixonmars/dnsmasq-china-list/issues/29
 server=/zoolnasm.com/114.114.114.114
+#server=/zoom.us/114.114.114.114 # Disabled: https://github.com/felixonmars/dnsmasq-china-list/issues/29
 server=/zoomad.net/114.114.114.114
 server=/zoomerstudio.com/114.114.114.114
 server=/zoomeye.org/114.114.114.114
