--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37208,6 +37208,7 @@ server=/gwamcc.com/114.114.114.114
 server=/gwauto.com/114.114.114.114
 server=/gwbfc.com/114.114.114.114
 server=/gwblighting.com/114.114.114.114
+server=/gwcdncloud.com/114.114.114.114
 server=/gwdang.com/114.114.114.114
 server=/gweike.com/114.114.114.114
 server=/gwell.cc/114.114.114.114
