--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -812,6 +812,7 @@ server=/0rz.ltd/114.114.114.114
 server=/0s8s.com/114.114.114.114
 server=/0slnk.us/114.114.114.114
 server=/0sm.com/114.114.114.114
+server=/0snd.cc/114.114.114.114
 server=/0u.com/114.114.114.114
 server=/0voice.com/114.114.114.114
 server=/0x3.com/114.114.114.114
