--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92259,6 +92259,7 @@ server=/x11296.com/114.114.114.114
 server=/x118.net/114.114.114.114
 server=/x121.net/114.114.114.114
 server=/x1997.net/114.114.114.114
+server=/x1abo.com/114.114.114.114
 server=/x23118.com/114.114.114.114
 server=/x23119.com/114.114.114.114
 server=/x23qb.com/114.114.114.114
