--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95040,6 +95040,7 @@ server=/xn--4xup5j.com/114.114.114.114
 server=/xn--54q249denfzw9a.net/114.114.114.114
 server=/xn--54q40czz0g7xp.com/114.114.114.114
 server=/xn--54qw4ra5323d.org/114.114.114.114
+server=/xn--55qwa79fh6ku8czve.com/114.114.114.114
 server=/xn--55qx2ag79c1iq.com/114.114.114.114
 server=/xn--55qx5d/114.114.114.114
 server=/xn--55qzsxj5y4ozkz93dswptmau4jc88dg75ctid8raf29c.com/114.114.114.114
