accelerated-domains: add qcpjjxc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70248,6 +70248,7 @@ server=/qcmuzhi.com/114.114.114.114
 server=/qcoco.com/114.114.114.114
 server=/qconbeijing.com/114.114.114.114
 server=/qconshanghai.com/114.114.114.114
+server=/qcpjjxc.com/114.114.114.114
 server=/qcplay.com/114.114.114.114
 server=/qcq3.com/114.114.114.114
 server=/qcql.com/114.114.114.114
