accelerated-domains: add dqntwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27993,6 +27993,7 @@ server=/dqiis.com/114.114.114.114
 server=/dqjob88.com/114.114.114.114
 server=/dqlaketour.com/114.114.114.114
 server=/dqlnyy.com/114.114.114.114
+server=/dqntwl.com/114.114.114.114
 server=/dqoooo.com/114.114.114.114
 server=/dqpi.net/114.114.114.114
 server=/dqpkb.com/114.114.114.114
