accelerated-domains: add j3yv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49216,6 +49216,7 @@ server=/j2ee.cc/114.114.114.114
 server=/j2up.com/114.114.114.114
 server=/j3677.com/114.114.114.114
 server=/j3cx.com/114.114.114.114
+server=/j3yv.com/114.114.114.114
 server=/j4321.com/114.114.114.114
 server=/j45.xyz/114.114.114.114
 server=/j5757.com/114.114.114.114
